# claculator

./: .clang-format  CMakeLists.txt  TODOS.md  controller.cpp  controller.hpp  main.cpp  text.hpp  textspan.hpp  viewmodel.cpp  viewmodel.hpp
calc/: bit_register.hpp  calc.cpp  calc.hpp  function.hpp  intbase.hpp  math_util.hpp  parse.cpp  parse.hpp  value.hpp
view/: BitfieldDisplay.cpp  BitfieldDisplay.hpp  style.hpp  ui_components.cpp  ui_components.hpp  view.cpp  view.hpp
